mylocation z-index fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -638,7 +638,7 @@ border-bottom: 3px solid #26A69A;
 #myLocation {
   position:absolute;
   color: #5d5d5d;
-  z-index:-1;
+  z-index:2;
   left:0;
   margin-top:30px;
 }
